--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "jwt-decode": "^4.0.0",
-    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -26,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-file-download": "^0.3.5",
     "react-icons": "^5.0.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
