--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/charts": "^2.0.3",
     "@ant-design/icons": "^5.3.7",
     "@ant-design/plots": "^2.1.13",
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +27,7 @@
     "react-file-download": "^0.3.5",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
