--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-file-download": "^0.3.5",
     "react-icons": "^5.0.1",
+    "react-lottie-loader": "^1.1.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.0",
