designation integration completed

--- a/web.config
+++ b/web.config
@@ -1,23 +1,37 @@
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
+    <!-- Ensure MIME types for common static files are set -->
+    <staticContent>
+      <mimeMap fileExtension=".js" mimeType="application/javascript" />
+      <mimeMap fileExtension=".css" mimeType="text/css" />
+      <mimeMap fileExtension=".html" mimeType="text/html" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".png" mimeType="image/png" />
+      <mimeMap fileExtension=".jpg" mimeType="image/jpeg" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+    </staticContent>
+
+    <!-- Enable URL Rewrite module -->
     <rewrite>
       <rules>
+        <!-- Rule to exclude API paths from being rewritten -->
+        <rule name="API Routes" stopProcessing="true">
+          <match url="^HublogApi/.*" />
+          <conditions logicalGrouping="MatchAll" />
+          <action type="None" />
+        </rule>
+
+        <!-- Rule to rewrite all other requests to index.html for React routing -->
         <rule name="React Routes" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add
-              input="{REQUEST_FILENAME}"
-              matchType="IsDirectory"
-              negate="true"
-            />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
           <action type="Rewrite" url="/index.html" />
         </rule>
       </rules>
     </rewrite>
   </system.webServer>
-  <system.web>
-    <customErrors mode="Off" />
-  </system.web>
-</configuration>;
+</configuration>
