changes on screenshot ui

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 WDS_SOCKET_PORT = 0
 NODE_ENV='development'
-# REACT_APP_API_URL=http://43.204.54.223:8001
+# NODE_ENV='production'
+REACT_APP_API_URL=https://localhost:44318
+# REACT_APP_API_URL=http://3.111.144.69:8080
 GENERATE_SOURCEMAP=false
