--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ WDS_SOCKET_PORT = 0
 NODE_ENV='development'
 # NODE_ENV='production'
 REACT_APP_API_URL=https://localhost:44318
-# REACT_APP_API_URL=http://3.111.144.69:8080
+# REACT_APP_API_URL=http://hublog.org:8080
 GENERATE_SOURCEMAP=false
