--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/charts": "^2.0.3",
     "@ant-design/icons": "^5.3.7",
     "@ant-design/plots": "^2.1.13",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
