Notebook api integration

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 WDS_SOCKET_PORT = 0
-NODE_ENV='development'
-# NODE_ENV='production'
-REACT_APP_API_URL=https://localhost:7263
-# REACT_APP_API_URL=https://hublog.org:8086
+# NODE_ENV='development'
+NODE_ENV='production'
+# REACT_APP_API_URL=https://localhost:7263
+REACT_APP_API_URL=https://hublog.org:8086
 GENERATE_SOURCEMAP=false
