--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
+    "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
