--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
+    "country-state-city": "^3.2.1",
     "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
