--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ WDS_SOCKET_PORT = 0
 NODE_ENV='development'
 # NODE_ENV='production'
 REACT_APP_API_URL=https://localhost:7263
-# REACT_APP_API_URL=https://hublog.org:8086
+# REACT_APP_API_URL=https://workstatus.qubinex.com:8086
 GENERATE_SOURCEMAP=false
