--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 WDS_SOCKET_PORT = 0
 NODE_ENV='development'
 # NODE_ENV='production'
-REACT_APP_API_URL=https://localhost:7263
-# REACT_APP_API_URL=https://workstatus.qubinex.com:8086
+REACT_APP_PORTAL_URL=http://localtest.me:3000/portal
+# REACT_APP_PORTAL_URL=https://workstatus.qubinex.com/portal
 GENERATE_SOURCEMAP=false
